Better error-detection and auto-correcting for spreadsheet importing
Better error-detection and auto-correcting for spreadsheet importing

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4302,6 +4302,18 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 
 
+-------------------------------------------------------------------
+4.26.0:
+
+-Better error-detection and auto-correcting for spreadsheet importing
+
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
