Auto-preloader for UI-related images, CODE REVIEW CHECKPOINT for upcoming v4.26.0 release
Auto-preloader for UI-related images, CODE REVIEW CHECKPOINT for upcoming v4.26.0 release

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4307,6 +4307,8 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Better error-detection and auto-correcting for spreadsheet importing
 
+-Misc UX
+
 -------------------------------------------------------------------
 
 
