Optimizations, README revision
Optimizations, README revision

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4320,7 +4320,7 @@ MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWA
 
 -Better plugin development UX
 
--Code cleanup
+-Code cleanup / optimizations
 
 -------------------------------------------------------------------
 
